<resources>
    <string name="app_name">AR Maker</string>

    <!-- Strings related to side menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="side_menu_armaker">AR Maker</string>
    <string name="side_menu_contents">AR Contents</string>
    <string name="side_menu_arviewer">AR Viewer</string>
    <string name="side_menu_arservice">AR Service</string>
    <string name="side_menu_location">Location</string>
    <string name="side_menu_instore">In-Store</string>
    <string name="side_menu_group1">Augmented Reality</string>
    <string name="side_menu_group2">Place</string>

    <!-- Strings related to main -->
    <string name="action_settings">Settings</string>
    <string name="Hello">Hey, buddy.</string>
    <string name="not_yet_implemented">This function is not implemented yet.</string>
    <string name="not_yet_login">You haven\'t signed in yet.</string>
    <string name="plane_finding">Searching for surfaces&#8230;</string>
    <string name="search_title">Search AR Marker</string>
    <string name="search_hint">Search</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or login</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>

    <!-- Strings related to signup -->
    <string name="title_activity_signup">Sign up</string>
    <string name="action_sign_up">Sign up or register</string>
    <string name="action_sign_up_short">Sign up</string>

    <!-- Strings related to signup -->
    <string name="fit_image_to_scan">Fit image to scan</string>

    <!-- Strings related to trivialdrive -->
    <string name="title_activity_trivialdrive">Trivial Drive</string>

    <string name="service_not_available">The background geocoding service is not available due to a network error or IO exception.</string>
    <string name="invalid_lat_long_used">The latitude and/or longitude values that are provided in the Location object are invalid.</string>
    <string name="no_address_found">The geocoder cannot find an address for the given latitude/longitude.</string>
    <string name="address_found">The geocoder found an address.</string>
    <string name="no_geocoder_available">The background geocoding service is not available due to a network error or IO exception.</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="title_activity_generalar">General AR Activity</string>
    <string name="title_activity_markergeneration">Marker Generation</string>
    <string name="title_activity_markertest">Marker Test</string>

    <string name="action_find_id">Find ID</string>
    <string name="action_find_password">Find Password</string>
    <string name="action_google_login">Google Login</string>
    <string name="action_facebook_login">Facebook Login</string>
    <string name="action_create_account">Create Account</string>
    <string name="prompt_login_email">Email</string>
    <string name="prompt_login_password">Password</string>
    <string name="prompt_signup_email">Email</string>
    <string name="prompt_signup_password">Password</string>
    <string name="prompt_signup_password2">Password (verify)</string>
    <string name="login_hello_start">"Hi, "</string>
    <string name="login_hello_end">.</string>
    <string name="error_login_failed">Login Failed.</string>
    <string name="authentication_success">Authentication Success</string>
    <string name="authentication_failed">Authenticationi Failed</string>
    <string name="create_user_success">Create User Success</string>
    <string name="create_user_failed">Create User Failed</string>
    <string name="verification_email_sent">"verification email sent to "</string>
    <string name="verification_email_sent_failed">Failed to send verification email.</string>
    <string name="prompt_signup_name">Name (optional)</string>
    <string name="logout_success">You have been logged out</string>
    <string name="logout_failed">Logout failed</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="speed">speed</string>
    <string name="address">address</string>
    <string name="error_unregistered_email">There is no email record corresponding to this identifier</string>
    <string name="error_many_request_failed">Too many unsuccessful login attempts. Please try again later</string>
    <string name="error_password_not_match">Password does not match</string>
    <string name="check_verification_email">Please check the verification email.</string>
    <string name="error_already_used_email">The email address is already in use by another account</string>
    <string name="tracking_location">Real-time Location</string>
    <string name="bottom_general">General</string>
    <string name="bottom_contents">Contents</string>
    <string name="bottom_service">Service</string>
    <string name="bottom_user">User</string>
    <string name="bottom_Information">Information</string>
    <string name="item_select">Select</string>
    <string name="arcore_test1">Augmented Image</string>
    <string name="arcore_test2">Chromakey Video</string>
    <string name="arcore_test3">SceneView Test</string>
    <string name="arcore_test4">Cloud Anchors</string>
    <string name="tab_my">MY</string>
    <string name="tab_contents">STORE</string>
    <string name="tab_published">PUBLISHED</string>
    <string name="title_activity_bottom">Information</string>
    <string name="title_activity_itemdetail">Item Detail</string>
    <string name="title_activity_itemlist">Item List</string>
    <string name="title_activity_tabbed">Contents List</string>
    <string name="button_store_purchase">Buy</string>
    <string name="button_next_step">Next Step</string>
    <string name="card_input_hint">Enter your phone number</string>
    <string name="card_input_prefill">" "</string>
    <string name="side_menu_logout">Logout</string>
    <string name="version_information">"Version: "</string>
    <string name="side_menu_group3">User</string>
    <string name="name_card">Name Card</string>
    <string name="input_phone_number">Enter the phone number on a name card.</string>
    <string name="hello">Hello.</string>
    <string name="no_markers_found">No markers found.</string>
    <string name="input">Input</string>
    <string name="failed_to_connect_server">Failed to connect to server.</string>
    <string name="request">Request</string>
    <string name="scanning_image">Scanning image..</string>
    <string name="failed">Failed</string>
    <string name="check_your_data">Please check the data you entered.</string>
    <string name="register_marker_first">Please register marker first.</string>

</resources>
