<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/side_menu_group1">
        <menu>
        <item
            android:id="@+id/nav_armaker"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/side_menu_armaker" />
        <item
            android:id="@+id/nav_arcontents"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/side_menu_contents" />
        <item
            android:id="@+id/nav_arviewer"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/side_menu_arviewer" />
        <item
            android:id="@+id/nav_arservice"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/side_menu_arservice" />
        </menu>
        </item>
    </group>

    <item android:title="@string/side_menu_group2">
        <menu>
            <item
                android:id="@+id/nav_location"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/side_menu_location" />
            <item
                android:id="@+id/nav_instore"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/side_menu_instore" />
        </menu>
    </item>

    <item>
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/side_menu_logout" />
        </menu>
    </item>
</menu>
