<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_card_height"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_content"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:elevation="12dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9">

            <ImageView
                android:id="@+id/image_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@mipmap/ic_launcher_round" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/Hello"
            android:layout_margin="@dimen/list_text_margin"/>

        <Button
            android:id="@+id/button_select"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:textSize="10sp"
            style="@style/DriveButtonStyle"
            android:text="@string/item_select"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Hello"/>

</LinearLayout>